# wheel-optimizer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark.yml  main.yml  release.yml
docs/: conf.py  index.rst
docs/_static/css/: pyodide.css
docs/project/: api.md  custom-optimizers.md  optimizers.md  usage.md
wheel_optimizer/: __init__.py  base.py  config.py  pipeline.py
wheel_optimizer/optimizers/: compile_pyc.py  minify_whitespace.py  remove_assertions.py  remove_c_source.py  remove_comments.py  remove_cython_source.py  remove_docstrings.py  remove_pycache.py  remove_tests.py  remove_type_annotations.py  remove_typestubs.py
wheel_optimizer/tests/: test_benchmark.py  test_config.py  test_pipeline.py
wheel_optimizer/tests/optimizers/: test_compile_pyc.py  test_minify_whitespace.py  test_remove_assertions.py  test_remove_c_source.py  test_remove_comments.py  test_remove_cython_source.py  test_remove_docstrings.py  test_remove_pycache.py  test_remove_tests.py  test_remove_type_annotations.py  test_remove_typestubs.py
